Update aset dan tampilan

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                     </div>
                     <!-- Item Sertifikat 4 -->
                     <div class="certificate-item fade-in-element delay-400">
-                        <img src="assets/images/sertifikat4.png" alt="Sertifikat 4" class="w-full h-48 object-cover">
+                        <img src="assets/images/Sertifikat4.webp" alt="Sertifikat 4" class="w-full h-48 object-cover">
                         <div class="p-6 text-center">
                             <h3 class="text-2xl font-bold mb-2">first korean</h3>
                             <!-- UBAH BARIS INI: text-slate-600 -> text-slate-400 -->
