Update aset dan tampilan

--- a/index.html
+++ b/index.html
@@ -280,11 +280,12 @@
                     </div>
                     <!-- Item Sertifikat 4 -->
                     <div class="certificate-item fade-in-element delay-400">
-                        <img src="assets/images/Sertifikat4.webp" alt="Sertifikat 4" class="w-full h-48 object-cover">
+                        <img src="assets/images/sertifikat4.png" alt="Sertifikat 4" class="w-full h-48 object-cover">
                         <div class="p-6 text-center">
-                            <h3 class="text-2xl font-bold mb-2">first korean</h3>
+                            <h3 class="text-2xl font-bold mb-2">Supervised Machine Learning: Regression and
+                                Classification</h3>
                             <!-- UBAH BARIS INI: text-slate-600 -> text-slate-400 -->
-                            <p class="text-slate-400 mb-4">Dikeluarkan oleh: Yonsei University</p>
+                            <p class="text-slate-400 mb-4">Dikeluarkan oleh: Stanford University/deeplearning.AI</p>
                             <a href="#" target="_blank" class="text-cyan-600 font-semibold hover:underline">
                                 Lihat Kredensial <i class="fas fa-external-link-alt text-sm ml-1"></i>
                             </a>
@@ -294,7 +295,7 @@
                     <div class="certificate-item fade-in-element delay-500">
                         <img src="assets/images/sertifikat5.png" alt="Sertifikat 5" class="w-full h-48 object-cover">
                         <div class="p-6 text-center">
-                            <h3 class="text-2xl font-bold mb-2">Fundamental Front-End Web Development</h3>
+                            <h3 class="text-2xl font-bold mb-2">Backend Development </h3>
                             <!-- UBAH BARIS INI: text-slate-600 -> text-slate-400 -->
                             <p class="text-slate-400 mb-4">Dikeluarkan oleh: Myskill</p>
                             <a href="#" target="_blank" class="text-cyan-600 font-semibold hover:underline">
@@ -314,6 +315,43 @@
                             </a>
                         </div>
                     </div>
+                    <!-- Tambahkan item sertifikat 7--->
+                    <div class="certificate-item fade-in-element delay-700">
+                        <img src="assets/images/sertifikat7.png" alt="Sertifikat 7" class="w-full h-48 object-cover">
+                        <div class="p-6 text-center">
+                            <h3 class="text-2xl font-bold mb-2">Back-End Development</h3>
+                            <!-- UBAH BARIS INI: text-slate-600 -> text-slate-400 -->
+                            <p class="text-slate-400 mb-4">Dikeluarkan oleh: META</p>
+                            <a href="#" target="_blank" class="text-cyan-600 font-semibold hover:underline">
+                                Lihat Kredensial <i class="fas fa-external-link-alt text-sm ml-1"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <!-- Tambahkan item sertifikat 8-->
+                    <div class="certificate-item fade-in-element delay-700">
+                        <img src="assets/images/sertifikat8.png" alt="Sertifikat 7" class="w-full h-48 object-cover">
+                        <div class="p-6 text-center">
+                            <h3 class="text-2xl font-bold mb-2">Data Classification and Summarization</h3>
+                            <!-- UBAH BARIS INI: text-slate-600 -> text-slate-400 -->
+                            <p class="text-slate-400 mb-4">Dikeluarkan oleh: IBM</p>
+                            <a href="#" target="_blank" class="text-cyan-600 font-semibold hover:underline">
+                                Lihat Kredensial <i class="fas fa-external-link-alt text-sm ml-1"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <!-- Tambahkan item sertifikat 9--->
+                    <div class="certificate-item fade-in-element delay-700">
+                        <img src="assets/images/sertifikat9.png" alt="Sertifikat 7" class="w-full h-48 object-cover">
+                        <div class="p-6 text-center">
+                            <h3 class="text-2xl font-bold mb-2">Machine Learning</h3>
+                            <!-- UBAH BARIS INI: text-slate-600 -> text-slate-400 -->
+                            <p class="text-slate-400 mb-4">Dikeluarkan oleh: IBM</p>
+                            <a href="#" target="_blank" class="text-cyan-600 font-semibold hover:underline">
+                                Lihat Kredensial <i class="fas fa-external-link-alt text-sm ml-1"></i>
+                            </a>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
